yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc
  namespace: auth
  labels:
    name: oidc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    name: oidc
