yaml/istio-virtualservice.yaml
# wird eigentlich nicht benötigt. Problem ist nur, dass wenn Istio
# den endpunkt "oauth/call" nicht im Routing drin hat, dann wird auch ext_authz nicht gerufen.
# und somit kann "ext_authz" den callback von IDP nicht bearbeiten. 
# nach dem ext_authz/oauth/callback ruf wird dann ein redirect gemacht. D.H. DAS HIER EINGETRAGENE ROUTING
# WIRD NIE AUSGEFÜHRT - WIRD ABER TROTZDEM BENÖTIGT.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dummy
  namespace: default
spec:
  hosts: ["<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          prefix: "/oauth/"
      route:
        - destination:
            host: oidc.auth.svc.cluster.local
